# Cynthia

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: ADSRComponent.cpp  ADSRComponent.h  Envelope.h  Filter.h  FilterComponent.cpp  LFOComponent.cpp  LFOComponent.h  MorphingLFO.h  MorphingOscillator.h  NoiseGenerator.h  OscillatorComponent.cpp  OscillatorComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  SynthUIModule.h  Utils.h  Voice.h  WaveformGenerator.h  WavetableOscillator.h
Source/Cynthia_DSP/: Envelope.h  Filter.h  MorphingLFO.h  MorphingOscillator.h  Synth.cpp  Synth.h  Voice.h  WaveformGenerator.h  WavetableOscillator.h
Source/Cynthia_UI/: ADSRComponent.cpp  ADSRComponent.h  FilterComponent.cpp  FilterComponent.h  LFOComponent.cpp  LFOComponent.h  OscillatorComponent.cpp  OscillatorComponent.h  SynthUIModule.h
Source/Cynthia_Utilities/: Utils.h
Tests/: TestWaveformGenerators.cpp
